--- a/front/public/index.html
+++ b/front/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" href="app.css">
-    <title>Document</title>
+    <title>TodoApp</title>
 </head>
 <body>
     <div id="app" class="container"></div>
